パイプを大なりに変更

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,7 @@ stages:
   - stage: "Dev"
     displayName: "Deploy the dev environment"
     dependsOn: Build
-    condition: |
+    condition: >
       and
       (
         succeeded(),
