appNameの変数名が不正なのを修正

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,5 +94,5 @@ stages:
                   displayName: "Azure App Service Deploy: website"
                   inputs:
                     azureSubscription: "Resource Manager - Tailspin - Space Game"
-                    appName: "$(WebAppName)"
+                    appName: "$(WebAppNameDev)"
                     package: "$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip"
