--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,135 +1,167 @@
 trigger:
-- '*'
+  - "*"
 
 variables:
-  buildConfiguration: 'Release'
+  buildConfiguration: "Release"
 
 stages:
-- stage: 'Build'
-  displayName: 'Build the web application'
-  jobs: 
-  - job: 'Build'
-    displayName: 'Build job'
-    pool:
-      vmImage: 'ubuntu-18.04'
-      demands:
-      - npm
+  - stage: "Build"
+    displayName: "Build the web application"
+    jobs:
+      - job: "Build"
+        displayName: "Build job"
+        pool:
+          vmImage: "ubuntu-18.04"
+          demands:
+            - npm
 
-    variables:
-      wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
-      dotnetSdkVersion: '3.1.300'
+        variables:
+          wwwrootDir: "Tailspin.SpaceGame.Web/wwwroot"
+          dotnetSdkVersion: "3.1.300"
 
-    steps:
-    - task: UseDotNet@2
-      displayName: 'Use .NET Core SDK $(dotnetSdkVersion)'
-      inputs:
-        version: '$(dotnetSdkVersion)'
-
-    - task: Npm@1
-      displayName: 'Run npm install'
-      inputs:
-        verbose: false
-
-    - script: './node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
-      displayName: 'Compile Sass assets'
-
-    - task: gulp@1
-      displayName: 'Run gulp tasks'
-
-    - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
-      displayName: 'Write build info'
-      workingDirectory: $(wwwrootDir)
-
-    - task: DotNetCoreCLI@2
-      displayName: 'Restore project dependencies'
-      inputs:
-        command: 'restore'
-        projects: '**/*.csproj'
-
-    - task: DotNetCoreCLI@2
-      displayName: 'Build the project - $(buildConfiguration)'
-      inputs:
-        command: 'build'
-        arguments: '--no-restore --configuration $(buildConfiguration)'
-        projects: '**/*.csproj'
-
-    - task: DotNetCoreCLI@2
-      displayName: 'Publish the project - $(buildConfiguration)'
-      inputs:
-        command: 'publish'
-        projects: '**/*.csproj'
-        publishWebProjects: false
-        arguments: '--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)'
-        zipAfterPublish: true
-
-    - publish: '$(Build.ArtifactStagingDirectory)'
-      artifact: drop
-
-- stage: 'Dev'
-  displayName: 'Deploy to the dev environment'
-  dependsOn: Build
-  jobs:
-  - deployment: Deploy
-    pool:
-      vmImage: 'ubuntu-18.04'
-    environment: dev
-    variables:
-    - group: Release
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - download: current
-            artifact: drop
-          - task: AzureWebApp@1
-            displayName: 'Azure App Service Deploy: website'
+        steps:
+          - task: UseDotNet@2
+            displayName: "Use .NET Core SDK $(dotnetSdkVersion)"
             inputs:
-              azureSubscription: 'Resource Manager - Tailspin - Space Game'
-              appName: '$(WebAppNameDev)'
-              package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
+              version: "$(dotnetSdkVersion)"
 
-- stage: 'Test'
-  displayName: 'Deploy to the test environment'
-  dependsOn: Dev
-  jobs:
-  - deployment: Deploy
-    pool:
-      vmImage: 'ubuntu-18.04'
-    environment: test
-    variables:
-    - group: 'Release'
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - download: current
-            artifact: drop
-          - task: AzureWebApp@1
-            displayName: 'Azure App Service Deploy: website'
+          - task: Npm@1
+            displayName: "Run npm install"
             inputs:
-              azureSubscription: 'Resource Manager - Tailspin - Space Game'
-              appName: '$(WebAppNameTest)'
-              package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
+              verbose: false
 
-- stage: 'Staging'
-  displayName: 'Deploy to the staging environment'
-  dependsOn: Test
-  jobs:
-  - deployment: Deploy
-    pool:
-      vmImage: 'ubuntu-18.04'
-    environment: staging
-    variables:
-    - group: 'Release'
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - download: current
-            artifact: drop
-          - task: AzureWebApp@1
-            displayName: 'Azure App Service Deploy: website'
+          - script: "./node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)"
+            displayName: "Compile Sass assets"
+
+          - task: gulp@1
+            displayName: "Run gulp tasks"
+
+          - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
+            displayName: "Write build info"
+            workingDirectory: $(wwwrootDir)
+
+          - task: DotNetCoreCLI@2
+            displayName: "Restore project dependencies"
             inputs:
-              azureSubscription: 'Resource Manager - Tailspin - Space Game'
-              appName: '$(WebAppNameStaging)'
-              package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
+              command: "restore"
+              projects: "**/*.csproj"
+
+          - task: DotNetCoreCLI@2
+            displayName: "Build the project - $(buildConfiguration)"
+            inputs:
+              command: "build"
+              arguments: "--no-restore --configuration $(buildConfiguration)"
+              projects: "**/*.csproj"
+
+          - task: DotNetCoreCLI@2
+            displayName: "Publish the project - $(buildConfiguration)"
+            inputs:
+              command: "publish"
+              projects: "**/*.csproj"
+              publishWebProjects: false
+              arguments: "--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)"
+              zipAfterPublish: true
+
+          - publish: "$(Build.ArtifactStagingDirectory)"
+            artifact: drop
+
+  - stage: "Dev"
+    displayName: "Deploy to the dev environment"
+    dependsOn: Build
+    jobs:
+      - deployment: Deploy
+        pool:
+          vmImage: "ubuntu-18.04"
+        environment: dev
+        variables:
+          - group: Release
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - download: current
+                  artifact: drop
+                - task: AzureWebApp@1
+                  displayName: "Azure App Service Deploy: website"
+                  inputs:
+                    azureSubscription: "Resource Manager - Tailspin - Space Game"
+                    appName: "$(WebAppNameDev)"
+                    package: "$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip"
+
+  - stage: "Test"
+    displayName: "Deploy to the test environment"
+    dependsOn: Dev
+    jobs:
+      - deployment: Deploy
+        pool:
+          vmImage: "ubuntu-18.04"
+        environment: test
+        variables:
+          - group: "Release"
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - download: current
+                  artifact: drop
+                - task: AzureWebApp@1
+                  displayName: "Azure App Service Deploy: website"
+                  inputs:
+                    azureSubscription: "Resource Manager - Tailspin - Space Game"
+                    appName: "$(WebAppNameTest)"
+                    package: "$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip"
+
+  - stage: "Staging"
+    displayName: "Deploy to the staging environment"
+    dependsOn: Test
+    jobs:
+      - deployment: Deploy
+        pool:
+          vmImage: "ubuntu-18.04"
+        environment: staging
+        variables:
+          - group: "Release"
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - download: current
+                  artifact: drop
+                - task: AzureWebApp@1
+                  displayName: "Azure App Service Deploy: website"
+                  inputs:
+                    azureSubscription: "Resource Manager - Tailspin - Space Game"
+                    appName: "$(WebAppNameStaging)"
+                    package: "$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip"
+      # 負荷テストを実施
+      - job: RunLoadTests
+        # 直前のデプロイジョブが終わってから実施
+        dependsOn: Deploy
+        displayName: Run load tests
+        pool:
+          vmImage: "ubuntu-18.04"
+        variables:
+          - group: Release
+        steps:
+          # JMeterをダウンロード・インストール $(jmeterVersion)はAzure Pipelinesの変数
+          - script: >
+              wget -c ftp.ps.pl/pub/apache/jmeter/binaries/apache-jmeter-$(jmeterVersion).tgz
+
+              tar -xzf apache-jmeter-$(jmeterVersion).tgz
+            displayName: Install Apache JMeter
+          # JMeterを実行する。 $(STAGING_HOSTNAME)はAzure Pipelinesの変数
+          - script: apache-jmeter-$(jmeterVersion)/bin/./jmeter -n -t LoadTest.jmx -o Results.xml -Jhostname=$(STAGING_HOSTNAME)
+            displayName: Run Load tests
+          # XSLTをインストールし、JMeter出力結果をJUnitに変換する
+          - script: >
+              sudo apt-get update
+
+              sudo apt-get install xsltproc
+
+              xsltproc JMeter2JUnit.xsl Results.xml > JUnit.xml
+            displayName: Transform JMeter output to JUnit
+          # JMeterのレポートをAzure Pipelinesに公開し可視化する
+          - task: PublishTestResults@2
+            inputs:
+              testResultsFormat: JUnit
+              testResultsFiles: JUnit.xml
